crypto-stream-analytics/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: crypto-analytics
  labels:
    app: crypto-stream-analytics
