crypto-stream-analytics/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crypto-ingress
  namespace: crypto-analytics
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: crypto-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: crypto-api
                port:
                  number: 8000
